--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^7.10.2",
     "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.2",
     "next": "^15.1.4",
     "next-transpile-modules": "^9.0.0",
-    "react": "^19.0.0-rc.1",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-calendar": "^3.9.0",
     "react-custom-scrollbars-2": "^4.2.1",
-    "react-dom": "^19.0.0-rc.1",
+    "react-dom": "^18.2.0",
     "react-i18next": "^15.4.0",
     "react-icons": "^4.4.0",
     "react-no-ssr": "^1.1.0",
